# Idiomatic-Cpp-Logger

./: CMakeLists.txt
include/: crtplogger.hpp  log_levels.hpp  logger.hpp
src/: console_logger.cpp  logger.cpp  main.cpp
tests/: CMakeLists.txt  LoggerTests.cpp
